Basic set up for filelist without the links

--- a/filelist.html
+++ b/filelist.html
@@ -6,9 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github File List</title>
 </head>
+<Style>
+    body {
+        background-image: url('.../filelistback.jpg');
+        background-size: cover;
+        background-position: center;
+        color: white;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+    }
+
+    img {
+        width: 100;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+    }
+</Style>
 
 <body>
     <h1>Github File List</h1>
+    <hr>
+    <p>Here is a list of all the files that I have within my SD330 repository</p>
+    <img src=".../headshot.png" alt="Avatar">
 
     <script>
         function githubFilelist() {
@@ -32,5 +52,9 @@
 
     </script>
 </body>
+
+<footer>
+    (C) T. Kaminer - 2/23/24
+</footer>
 
 </html>
