--- a/filelist.html
+++ b/filelist.html
@@ -8,7 +8,7 @@
 </head>
 <Style>
     body {
-        background-image: url('.../SD330/filelistback.jpg');
+        background-image: url('.../SD330/blob/main/filelistback.jpg');
         background-size: cover;
         background-position: center;
         color: white;
@@ -28,7 +28,7 @@
     <h1>Github File List</h1>
     <hr>
     <p>Here is a list of all the files that I have within my SD330 repository</p>
-    <img src=".../SD330/headshot.png" alt="Avatar">
+    <img src=".../SD330/blob/main/headshot.png" alt="Avatar">
 
     <script>
         function githubFilelist() {
