--- a/filelist.html
+++ b/filelist.html
@@ -11,13 +11,15 @@
         background-image: url('filelistback.jpg');
         background-size: cover;
         background-position: center;
-        color: white;
+        color: black;
+        text-decoration: underline white;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
         text-align: center;
+        font-size: x-large;
     }
 
     img {
-        width: 100;
+        width: auto;
         height: auto;
         display: block;
         margin: 0 auto;
@@ -52,7 +54,7 @@
 
     </script>
 </body>
-
+<hr>
 <footer>
     (C) T. Kaminer - 2/23/24
 </footer>
