--- a/filelist.html
+++ b/filelist.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;700&display=swap">
     <title>Github File List</title>
 </head>
 <Style>
@@ -13,9 +14,11 @@
         background-position: center;
         color: black;
         text-decoration: underline white;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-family: 'Spartan', sans-serif;
         text-align: center;
-        font-size: x-large;
+        font-size: 3em;
+        font-weight: bold;
+
     }
 
     img {
@@ -30,7 +33,7 @@
     <h1>Github File List</h1>
     <hr>
     <p>Here is a list of all the files that I have within my SD330 repository</p>
-    <img src="headshot.png" alt="Avatar">
+    <img src="headshot.PNG" alt="Avatar">
 
     <script>
         function githubFilelist() {
