--- a/filelist.html
+++ b/filelist.html
@@ -7,6 +7,27 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;700&display=swap">
     <title>Github File List</title>
 </head>
+<script>
+    function githubFilelist() {
+        var htmlString = "";
+
+        (async () => {
+            const response = await fetch("https://api.github.com/repos/tyler-i-kaminer/SD330/contents/");
+            const data = await response.json();
+
+            for (let file of data) {
+                fname = file.name;
+                fpath = "https://tyler-i-kaminer.github.io/SD330/" + fname;
+
+                htmlString += "<p>" + fname + "</p>";
+                htmlString += "<p>" + fpath + "</p>";
+            }
+
+            document.getElementById('files').innerHTML = htmlString;
+        })();
+    }
+
+</script>
 <Style>
     body {
         background-image: url('filelistback.jpg');
@@ -29,33 +50,16 @@
     }
 </Style>
 
-<body>
+<body onload="githubFilelist()">
     <h1>Github File List</h1>
     <hr>
-    <p>Here is a list of all the files that I have within my SD330 repository</p>
     <img src="headshot.PNG" alt="Avatar">
+    <p>Here is a list of all the files that I have within my SD330 repository</p>
+    <div id="files">
 
-    <script>
-        function githubFilelist() {
-            var htmlString = "";
+    </div>
 
-            (async () => {
-                const response = await fetch("https://api.github.com/repos/tyler-i-kaminer/SD330/contents/");
-                const data = await response.json();
 
-                for (let file of data) {
-                    fname = file.name;
-                    fpath = "https://tyler-i-kaminer.github.io/SD330/" + fname;
-
-                    htmlString += "<p>" + fname + "</p>";
-                    htmlString += "<p>" + fpath + "</p>";
-                }
-
-                document.getElementById('files').innerHTML = htmlString;
-            })();
-        }
-
-    </script>
 </body>
 <hr>
 <footer>
