--- a/filelist.html
+++ b/filelist.html
@@ -33,6 +33,14 @@
         text-decoration: underline goldenrod;
         font-weight: lighter;
     }
+
+    a:visited {
+        color: antiquewhite;
+    }
+
+    a {
+        color: white;
+    }
 </Style>
 
 <body onload="githubFilelist()">
