Final changes for 4/25
Still need to fix spaces not showing up, unsure if he wants a seperate page or make it with buttons

--- a/parking.html
+++ b/parking.html
@@ -12,12 +12,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="parking404.html">Login</a></li>
-                <li><a href="parking404.html">Help</a></li>
-                <li><a href="parking404.html">Contact</a></li>
-                <li><a href="lots.html">Parking Lots</a></li>
-                <li><a href="parking404.html">Tickets</a></li>
-                <li><a href="parking404.html">Account</a></li>
+                <li><a href="parking404.html"><br>Login</a></li>
+                <li><a href="parking404.html"><br>Help</a></li>
+                <li><a href="parking404.html"><br>Contact</a></li>
+                <li><a href="lots.html"><br>Parking Lots</a></li>
+                <li><a href="parking404.html"><br>Tickets</a></li>
+                <li><a href="parking404.html"><br>Account</a></li>
             </ul>
         </nav>
     </header>
@@ -27,9 +27,9 @@
         <p>Content of the home page goes here...</p>
     </main>
 
-    <footer>
+    <div class="footer">
         <p>&copy; T. Kaminer</p>
-    </footer>
+    </div>
 </body>
 
 </html>
