--- a/lots.html
+++ b/lots.html
@@ -13,11 +13,12 @@
         <h1 id="lotTitle">Parking Lots</h1>
         <nav>
             <ul>
-                <li><a href="parking404.html">Login</a></li>
-                <li><a href="parking404.html">Help</a></li>
-                <li><a href="parking404.html">Contact</a></li>
-                <li><a href="parking404.html">Tickets</a></li>
-                <li><a href="parking404.html">Account</a></li>
+                <li><a href="parking.html"><br>Home</a></li>
+                <li><a href="parking404.html"><br>Login</a></li>
+                <li><a href="parking404.html"><br>Help</a></li>
+                <li><a href="parking404.html"><br>Contact</a></li>
+                <li><a href="parking404.html"><br>Tickets</a></li>
+                <li><a href="parking404.html"><br>Account</a></li>
             </ul>
         </nav>
     </header>
@@ -26,34 +27,54 @@
     <main>
         <p id="parkingLots">
        
+        <div id="spacesContent"></div>
+        
     </main>
 
     <footer>
-        <p>&copy; T. Kaminer</p>
+        <p>© T. Kaminer</p>
     </footer>
 
     <script type="module">
         let htmlString = "<p> Fetching file: tyler-i-kaminer.github.io/SD330/parking.json";
-htmlString += "<br> Loading into: 'data' multi-dimensional object (array)";
+        htmlString += "<br> Loading into: 'data' multi-dimensional object (array)";
 
-const response = await fetch("https://tyler-i-kaminer.github.io/SD330//parking.json");
-const data = await response.json();
+        async function fetchData() {
+            const response = await fetch("https://tyler-i-kaminer.github.io/SD330//parking.json");
+            const data = await response.json();
 
-for(let i = 0; i < data['parking_lots'].length; i++){
-    let lot = data['parking_lots'][i];
+            for(let i = 0; i < data['parking_lots'].length; i++){
+                let lot = data['parking_lots'][i];
 
-    htmlString += "<hr><p> Lot: " + lot['name'] + " ";
-    htmlString += "<p>Map: <br> <img src=" + lot['map_filename'] + " alt= " + lot['map_filename'];
-    htmlString += "<ul><li>Total spaces = " + lot['total_spaces'] + " </li>";
-    htmlString += "<li>Comments: " + lot['comments'] + " </li>";
-    htmlString += "<li>Lot usage: " + lot['lotUsage'] + " </li></ul>";
-    htmlString += "<br>";
+                htmlString += "<hr><p> Lot: " + lot['name'] + " ";
+                htmlString += "<p>Map: <br> <img src=" + lot['map_filename'] + " alt= " + lot['map_filename'];
+                htmlString += "<ul><li>Total spaces = " + lot['total_spaces'] + " </li>";
+                htmlString += "<li>Comments: " + lot['comments'] + " </li>";
+                htmlString += "<li>Lot usage: " + lot['lotUsage'] + " </li></ul>";
+                htmlString += "<br>";
+                htmlString += `<button onclick='showSpaces(${i})' id='parkSpaces'>View Spaces</button>`;
+            }
 
+            document.getElementById('parkingLots').innerHTML += htmlString;
+        }
 
-}
+        function showSpaces(i){
+            let lot = data['parking_lots'][i];
+            let sS = "";
+            for(let j = 0; j < lot['spaces'].length; j++){
+                let spot = lot['spaces'][j]; 
+                sS += "<p>" + spot['name'];
+                sS += spot['type'];
+                sS += spot['status'];
+                sS += spot['filled_datetime'];
+                sS += spot['reserved_datetime'] + "</p>";
+            }
 
-document.getElementById('parkingLots').innerHTML += htmlString;
-        </script>
+            document.getElementById('spacesContent').innerHTML += sS;
+        }
+
+        fetchData();
+    </script>
 </body>
 
 </html>
